# subgraph

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.toml
examples/: README.md  advanced-mixed.toml  basic-mongo.toml  basic-sqlite.toml  chat-gpt.toml  cors-options.toml  guards.toml  http.toml  joins-types.toml  mixed-data_sources.toml  mongo.toml  mysql.toml  object-and-list-scalars-mongo.toml  object-scalar-mongo.toml  postgres.toml  sqlite.toml  tokenization.toml  two-mongo-dbs.toml  type-scalars.toml
examples/guards/: sqlite_service.toml
src/: lib.rs  main.rs
src/cli_args/: mod.rs
src/cli_args/generate_keypair/: mod.rs
src/configuration/: mod.rs
src/configuration/cors_config/: mod.rs
src/configuration/environment/: mod.rs
src/configuration/subgraph/: mod.rs
src/data_sources/: mod.rs
src/data_sources/http/: mod.rs
src/data_sources/mongo/: mod.rs
src/data_sources/sql/: mod.rs
src/database/: mod.rs
src/database/data_source/: mod.rs
src/database/indexes/: mod.rs
src/database/services/: mod.rs
src/filter_operator/: mod.rs
src/graphql/: mod.rs
src/graphql/entity/: mod.rs
src/graphql/input/: mod.rs
src/graphql/resolver/: mod.rs
src/graphql/scalars/: datetime.rs  mod.rs  objectid.rs
src/graphql/schema/: mod.rs
src/mysql_row/: mod.rs
src/request_filter_language/: mod.rs
src/request_filter_language/field_filter/: mod.rs
src/request_filter_language/filter_config/: mod.rs
src/request_filter_language/stats/: mod.rs
src/resolver_type/: mod.rs
src/scalar_option/: bson_to_sql_value.rs  document_field_to_async_graphql_value.rs  get_from_document.rs  get_nullable_type_ref.rs  json_to_async_graphql_value.rs  mod.rs  mysql_response_row_to_input_doc.rs  mysql_rr_to_input_doc.rs  pg_rr_to_input_doc.rs  postgres_response_row_to_input_doc.rs  resolve_document_field.rs  rr_to_async_graphql_value.rs  rr_to_serde_json_value.rs  sqlite_response_row_to_input_doc.rs  sqlite_rr_to_input_doc.rs  to_async_graphql_value.rs  to_bson_element_type.rs  to_evalexpr.rs  to_input_type_ref.rs  to_mongo.rs  to_nn_type_ref.rs  to_nullable_type_ref.rs  to_serde_json_value.rs  to_sql_value.rs  to_sql_value_enum.rs
src/sql_value/: mod.rs  to_sql_value.rs
src/sqlx/: mod.rs
src/traits/: mod.rs
src/traits/async_graphql/: mod.rs
src/traits/evalexpr/: mod.rs
src/traits/sqlx/: mod.rs
src/utils/: mod.rs
src/utils/clean_string/: mod.rs
src/utils/document/: mod.rs
src/utils/log_level/: mod.rs
src/utils/logger/: mod.rs
src/utils/verify_license/: mod.rs
tests/: README.md  docker-compose.yaml  health_check.rs  test_config.toml  test_config_imports.toml  tests.rs
tests/auth/register/: mod.rs
tests/http_ds/: mod.rs
tests/http_ds/create_one/: mod.rs
tests/http_ds/find_many/: mod.rs
tests/http_ds/find_one/: mod.rs
tests/http_ds/update_many/: mod.rs
tests/http_ds/update_one/: mod.rs
tests/mongo/: init-mongo.js
tests/mongo/create_one/: mod.rs
tests/mongo/find_many/: mod.rs
tests/mongo/find_one/: mod.rs
tests/mongo/update_many/: mod.rs
tests/mongo/update_one/: mod.rs
tests/mysql/: .env
tests/mysql/create_one/: mod.rs
tests/mysql/find_many/: mod.rs
tests/mysql/find_one/: mod.rs
tests/mysql/migrations/: 20230625144512_create_tables.down.sql  20230625144512_create_tables.up.sql
tests/mysql/update_many/: mod.rs
tests/mysql/update_one/: mod.rs
tests/postgres/: .env
tests/postgres/create_one/: mod.rs
tests/postgres/find_many/: mod.rs
tests/postgres/find_one/: mod.rs
tests/postgres/update_many/: mod.rs
tests/service/: mod.rs
tests/sqlite/: .env  mod.rs  subgraph_sqlite.db
(+168 files in other folders)
