[package]
name = "subgraph"
version = "0.0.12"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "subgraph"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
warp = "0.3.3"
http = "0.2.8"
async-graphql = {version = "6.0.7", features= ["dynamic-schema"]}
async-graphql-warp = "6.0.7"
reqwest = {version = "0.11.14", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4.23"
quote = "1.0"
proc-macro2 = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.1.1", features = ["derive"] }
toml = "0.7.2"
http-serde = "1.1.2"
json = "0.12.4"
serde_json = "1.0.95"
sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-tokio", "postgres", "mysql", "sqlite", "json" ] }
evalexpr = "10.0.0"
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }
biscuit-auth = "4"
base64 = "0.21.4"
notify = "6.1.1"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["tokio-runtime"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

